tests/only_support_flow_fixme_and_expected_error/only_support_flow_fixme_and_expected_error.exp
Error ----------------------------------------------------------------------------------------------------- test.js:6:19

Cannot assign `1` to `c` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:6:19
   6| const c: string = 1; // not suppressed
                        ^ [1]

References:
   test.js:6:10
   6| const c: string = 1; // not suppressed
               ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:8:19

Cannot assign `1` to `d` because number [1] is incompatible with string [2]. [incompatible-type]

   test.js:8:19
   8| const d: string = 1; // not suppressed
                        ^ [1]

References:
   test.js:8:10
   8| const d: string = 1; // not suppressed
               ^^^^^^ [2]



Found 2 errors
